tests/ui/g-par-role-conflict.stderr
error[E0080]: evaluation panicked: parallel arms reuse a role on the same lane
 --> tests/ui/g-par-role-conflict.rs:9:13
  |
9 |     let _ = g::par(lane_a, lane_b);
  |             ^^^^^^^^^^^^^^^^^^^^^^ evaluation of `_` failed inside this call
  |
note: inside `par::<StepCons<SendStep<Role<0>, Role<1>, hibana::global::Message<hibana::global::LabelMarker<3>, ()>>, StepNil>, StepCons<SendStep<Role<0>, Role<2>, hibana::global::Message<hibana::global::LabelMarker<4>, ()>>, StepNil>>`
 --> src/global.rs
  |
  |     program::par_binary(left, right)
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: inside `hibana::global::program::par_binary::<StepCons<SendStep<Role<0>, Role<1>, hibana::global::Message<hibana::global::LabelMarker<3>, ()>>, StepNil>, StepCons<SendStep<Role<0>, Role<2>, hibana::global::Message<hibana::global::LabelMarker<4>, ()>>, StepNil>>`
 --> $RUST/core/src/panic.rs
  |
  |         $crate::panicking::panic_fmt($crate::const_format_args!($($t)+));
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the failure occurred here
  |
 ::: src/global/program.rs
  |
  |         panic!("parallel arms reuse a role on the same lane");
  |         ----------------------------------------------------- in this macro invocation
